project-files/backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
